All_Component_DX/force-app/main/default/objects/ServiceMax_Tags__c/ServiceMax_Tags__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to store language-specific text used in various ServiceMax Visualforce pages. Text from this object is used on button labels, field labels, warnings, error messages etc.</description>
    <label>ServiceMax Tag</label>
    <nameField>
        <label>Tag ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceMax Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>