All_Component_DX/force-app/main/default/objects/ServiceMax_Tags__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Select Language for the TAG.</description>
    <inlineHelpText>Select Language for the TAG.</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Chinese (Traditional)</fullName>
            </value>
            <value>
                <fullName>Chinese (Simplified)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Brazilian)</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>