All_Component_DX/force-app/main/default/objects/ServiceMax_Tags__c/fields/Submodule__c.field-meta.xml
<CustomField>
    <fullName>Submodule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ServiceMax Processes: Record Type  &apos;ServiceMax Submodules&apos;</description>
    <inlineHelpText>Lookup to ServiceMax Processes: Record Type  &apos;ServiceMax Submodules&apos;</inlineHelpText>
    <label>Submodule</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Tags</relationshipLabel>
    <relationshipName>ServiceMax_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>