All_Component_DX/force-app/main/default/objects/ServiceMax_Tags__c/fields/SubmoduleID__c.field-meta.xml
<CustomField>
    <fullName>SubmoduleID__c</fullName>
    <description>The Submodule in which this tag is used.</description>
    <formula>Submodule__r.SubmoduleID__c</formula>
    <inlineHelpText>The Submodule in which this tag is used.</inlineHelpText>
    <label>SubmoduleID</label>
    <type>Text</type>
</CustomField>