All_Component_DX/force-app/main/default/objects/ServiceMax_Tags__c/fields/Tag_Context__c.field-meta.xml
<CustomField>
    <fullName>Tag_Context__c</fullName>
    <label>Tag Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>