All_Component_DX/force-app/main/default/objects/ServiceMax_Tags__c/fields/Tag_Text__c.field-meta.xml
<CustomField>
    <fullName>Tag_Text__c</fullName>
    <description>Translated text for the TAG to be displayed in Visualforce page.</description>
    <inlineHelpText>Translated text for the TAG to be displayed in Visualforce page</inlineHelpText>
    <label>Tag Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>