All_Component_DX/force-app/main/default/objects/ServiceMax_Tags__c/fields/Tag_Value__c.field-meta.xml
<CustomField>
    <fullName>Tag_Value__c</fullName>
    <label>Tag Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>